# telltale

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
telltale/game/: __init__.py  cards.py  economy.py  engine.py  floors.py  holdem.py  perks.py
telltale/native/poker_solver/: README.md
telltale/server/: schemas.py
telltale/web/: app.js  index.html  styles.css
tests/: test_cards.py  test_floors.py  test_holdem_engine.py  test_init.py  test_perks.py  test_pots.py  test_run_economy.py
